--- a/src/mkit.csproj
+++ b/src/mkit.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>mkit</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PublishAot>true</PublishAot>
   </PropertyGroup>
 
   <ItemGroup>
